--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/autoprefixer": "^10.2.0",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "@types/tailwindcss": "^3.1.0",
+    "autoprefixer": "^10.4.11",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   }
 }
